' @startuml 仮作成
' ' package "アカウント"{
' '     class "（ログイン）"
' ' }

' class "View"
' package model <<Rectangle>> {
'     ' Django でモデルがなにを継承しているのかを検索する。
'     class "EmployeeInfo\n(従業員情報モデル)" as 従業員情報モデル
'     class "StoreInfo\n(店舗情報モデル)" as 店舗情報モデル
'     class "ItemInfo\n(商品情報モデル)" as 商品情報モデル
'     class "ItemSpecification\n(商品スペック)" as 商品スペック
'     class "EarningInfo\n(売上情報モデル)" as 売上情報モデル
'     class "CpuBench\n(CPUベンチマークモデル)" as CPUベンチマークモデル
'     class "GpuBench\n(GPUベンチマークモデル)" as GPUベンチマークモデル
'     class "Bottleneck\n(ボトルネックモデル)" as ボトルネックモデル
'     class "Reserve\n(取置商品モデル)" as 取置商品モデル
'     class "SetItem\n(セット商品モデル)" as セット商品モデル
'     class "SetIntermediate\n(セット商品中間モデル)" as セット商品中間モデル
' }
' package "django.db.models"{
'     class Model

' ToDo
'   モデルとパッケージを追加しました、確認お願いします。
'   1.モデルをDBのパッケージにしてみたけど、どうでしょうか
'   2.パッケージを追加したら配置が悪かったので変えました、ご自由に
'   3.主に画面設計書を見てそれぞれわかる範囲でクラスを追加してください
'   4.クラスの祖先は後でコマンドで出すので、見えているクラスで現状大丈夫です
'   5.ある程度クラスを出し終わったら少しコーディングして様子見ます

@startuml class_diagrams
' ヘッダー
header 営業情報管理システム
' タイトル
title クラス図

    ' 機能名 アカウント
    ' 機能ID F00
package "アカウント"{
    class "djangoallauth\n(ログイン)" as djangoallauth{
    }
}

package "マスタ管理" {

    ' 機能名 従業員マスタ
    ' 機能ID F01
    package "従業員マスタ" as F01{
        class "EmployeeInfo\n(従業員情報モデル)" as 従業員情報モデル{}
    }

    ' 機能名 店舗マスタ
    ' 機能ID F02
    package "店舗マスタ" as F02{
        class "StoreInfo\n(店舗情報モデル)" as 店舗情報モデル
    }

    ' 機能名 商品マスタ
    ' 機能ID F03
    package "商品マスタ" as F03{
        package 商品情報モデル <<Database>> {
            class "ItemInfo" as 商品情報モデル
        }
    class "ItemSpecification\n(商品スペック)" as 商品スペック
    }
    ' class "ItemInfo\n(商品情報モデル)" as 商品情報モデル

    ' 機能名 売上マスタ
    ' 機能ID F04
    package "売上マスタ" as F04{
        class "EarningInfo\n(売上情報モデル)" as 売上情報モデル
    }

    ' 機能名 ベンチマークマスタ
    ' 機能ID F05
    package "ベンチマークマスタ" as F05{
        class "CpuBench\n(CPUベンチマークモデル)" as CPUベンチマークモデル
        class "GpuBench\n(GPUベンチマークモデル)" as GPUベンチマークモデル
    } 
    
    ' 機能名 ボトルネックマスタ
    ' 機能ID F06
    package "ボトルネックマスタ" as F06{
        class "Bottleneck\n(ボトルネックモデル)" as ボトルネックモデル
    }
    
    
    
}

package "商品情報管理" {

    ' 機能名 在庫
    ' 機能ID F07
    package "在庫" {
        class "SetItem\n(セット商品モデル)" as セット商品モデル
        class "SetIntermediate\n(セット商品中間モデル)" as セット商品中間モデル
    }
    
    ' 機能名 検索
    ' 機能ID F08
    package "検索" {

    }
    
    ' 機能名 取置予約
    ' 機能ID F09
    package "取置予約" {
        class "Reserve\n(取置商品モデル)" as 取置商品モデル
    }
    
    ' 機能名 見積
    ' 機能ID F10
    package "見積" {}
    
    ' 機能名 売上
    ' 機能ID F11
    package "売上" {}
}

package "人事情報管理" {

    ' 機能名 従業員参照
    ' 機能ID F12
    package "従業員参照" {}
    
    ' 機能名 店舗参照
    ' 機能ID F13
    package "店舗参照" {}
    
    ' 機能名 勤務状況編集
    ' 機能ID F14
    package "勤務状況編集" {}
}
class Meta


' サンプル属性
Meta : verbose_name_plural
Meta : __str__()
' サンプル属性
RedirectView : url
RedirectView : pattern_name
RedirectView : query_string
RedirectView : permanent
RedirectView : head()
RedirectView : options()
RedirectView : put()
RedirectView : get()
RedirectView : post()
RedirectView : delete()

' モデル属性
従業員情報モデル : -employee_id : CHAR[13]
従業員情報モデル : -store_id : SMALLINT[3]
従業員情報モデル : -employment_status : CHAR[5]
従業員情報モデル : -name : CHAR[30]
従業員情報モデル : -ruby_name : CHAR[30]
従業員情報モデル : -tel_num : CHAR[13]
従業員情報モデル : -gender : SMALLINT[3]
従業員情報モデル : -birthday : TIMESTAMP
従業員情報モデル : -invalid_flg : SMALLINT[1]
従業員情報モデル : -created_at : TIMESTAMP
従業員情報モデル : -lastlogin_at : TIMESTAMP
従業員情報モデル : -updated_at : TIMESTAMP





View <|-- RedirectView
Model <|-- model
model -- Meta



アカウント -[hidden]do- マスタ管理
マスタ管理 -[hidden]do- 商品情報管理
商品情報管理 -[hidden]do- 人事情報管理

@enduml